apps/web/screens/main.module.css
.container {
  display: flex;
  height: 100vh;
  margin: 0;
}

.mapContainer {
  box-sizing: border-box;
  width: 50%;
  height: 100%;
  overflow: hidden;
  padding: 12px;
}

.feedContainer {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 50%;
  height: 100%;
  overflow-y: auto;
  padding: 20px;
  padding-top: 50px;
  gap: 80px
}

@media (max-width: 768px) {
  .container {
    flex-direction: column;
  }

  .mapContainer,
  .feedContainer {
    overflow-y: initial;
    width: 100%;
    height: 50%;
    padding-top: 12px;
  }
}

